Finding and returning product info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.datasource.url=jdbc:postgresql://lucky.db.elephantsql.com:5432/cmswspki
 #spring.datasource.username=cmswspki
 #spring.datasource.password=6Nlw76ZGjfDJHojj_wG3rqocuW1dLq6R
-spring.datasource.url=jdbc:postgresql://localhost:5432/ioproj
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Pass123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
