Updated calculator controller & SecurityConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.password=6Nlw76ZGjfDJHojj_wG3rqocuW1dLq6R
 spring.datasource.url=jdbc:postgresql://localhost:5432/ioproj
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=moviehubpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
